<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:src="@drawable/sun_cloud"
            android:contentDescription="@string/des"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_info"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tueday"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:src="@drawable/sun_cloud"
            android:contentDescription="@string/des"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_info"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:src="@drawable/sun_cloud"
            android:contentDescription="@string/des"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_info"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thusday"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:src="@drawable/sun_cloud"
            android:contentDescription="@string/des"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_info"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:src="@drawable/sun_cloud"
            android:contentDescription="@string/des"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_info"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:src="@drawable/sun_cloud"
            android:contentDescription="@string/des"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_info"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>




</LinearLayout>